[tool.poetry]
name = "coin-question"
version = "0.1.0"
description = ""
authors = ["a <a>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
structlog = "^24.1.0"


[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
mypy = "^1.9.0"
ruff = "^0.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
